# MLFrameworks

./: .clang-format  .clangd  .gitignore  .ruff.toml  README.md  format.py  osx_opencv.sh  osx_ort_coreml.sh  requirements.txt  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: format.yaml  stale.yaml
Assets/: .gitignore  export.py
Assets/yolov8n.mlpackage/: Manifest.json
Assets/yolov8n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
Common/cpp/: base.cpp  base.hpp
Common/py/: base.py
CoreML/: .gitignore  CMakeLists.txt  README.md  main.py  validate.ipynb
CoreML/cpp/: bindings.h  bindings.mm  main.cpp
CoreML/objc/: main.mm
CoreML/py/: main.py
CoreML/python/: main.py
LibTorch/: .gitignore  README.md
LibTorch/dockerfiles/: Dockerfile.cpu
LibTorch/example/: CMakeLists.txt  run.sh
LibTorch/example/cpp/: main.cpp
LibTorch/example/py/: main.py
MNN/: README.md  build_mnn_osx.sh
MNN/example/: CMakeLists.txt
MNN/example/cpp/: main.cpp
MNN/example/py/: main.py
ONNXRuntime/: .gitignore  README.md  build_onnxruntime_osx.sh
ONNXRuntime/dockerfiles/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.openvino  Dockerfile.tensorrt
ONNXRuntime/example/: CMakeLists.txt  main.cpp  main.py  run.sh
ONNXRuntime/example/cpp/: main.cpp
ONNXRuntime/example/py/: main.py
OpenCV/: .gitignore  README.md  build_opencv_osx.sh
OpenCV/dockerfiles/: Dockerfile.cpu  Dockerfile.cuda
OpenCV/example/: CMakeLists.txt  main.cpp  main.py  run.sh
OpenCV/example/cpp/: main.cpp
OpenCV/example/py/: main.py
OpenVINO/: README.md
TensorRT/: README.md
TensorRT/dockerfiles/: Dockerfile
TensorRT/example/: CMakeLists.txt  main.cpp  main.py  run.sh
TensorRT/example/cpp/: main.cpp
TensorRT/example/py/: main.py
Triton/: README.md  client.py
Triton/dockerfiles/: Dockerfile.client  Dockerfile.server
Triton/model_repository/detection_postprocessing/: config.pbtxt
Triton/model_repository/detection_postprocessing/1/: model.py
Triton/model_repository/detection_preprocessing/: config.pbtxt
Triton/model_repository/detection_preprocessing/1/: model.py
Triton/model_repository/ensemble/: config.pbtxt
Triton/model_repository/yolov8n/: config.pbtxt
